Fixed the text input controls so they don't have the odd background image gradient, when contained within an InputDecorator, on FirefoxOS

--- a/css/RichText.less
+++ b/css/RichText.less
@@ -7,6 +7,7 @@
 	outline: none;
 	cursor: pointer;
 	background-color: @onyx-input-background;
+	background-image: none;
 	font-size: @onyx-richtext-font-size;
 	min-height: 20px;
 	min-width: 100px;
